2010-04-08  Miloslav Trmač  <mitr@redhat.com>

	* configure.ac: Release 1.105.
	* NEWS: Update.

	* userhelper.h
	* userhelper.c
	* userhelper-wrap.c: Remove #ifdef USE_STARTUP_NOTIFICATION where
	the clutter is not worth it.
	* userhelper.c (converse_pipe, wrap)
	* userhelper-wrap.c (userhelper_handle_childout): Remove #ifdef
	USE_STARTUP_NOTIFICATION, adding some parsing and data movements.  The
	actual functionality is still controlled by the #ifdef.

	* userhelper.c (send_sn_info): Split from converse_pipe().
	(converse_pipe): Fix getting the value of UH_SN_ID.
	(pipe_conv_wait_for_sync): Handle incoming UH_SN_ID.  Add a debug
	message.
	(pipe_conv_exec_start, pipe_conv_exec_fail): Send startup notification
	information.

	* userhelper-wrap.c (userhelper_handle_childout): Clean up startup
	notification if we open another dialog.

	* consolehelper.c (main): Don't put garbage in DESKTOP_STARTUP_ID if it
	was unset.

2010-03-31  Miloslav Trmač  <mitr@redhat.com>

	* userhelper.h (ERR_MAX_TRIES): New definition.
	* userhelper.c (fail_exit): Convert PAM_MAXTRIES into ERR_MAX_TRIES.
	* userhelper-wrap.c (userhelper_parse_exitstatus): Add error message for
	ERR_MAX_TRIES.

2010-03-26  Miloslav Trmač  <mitr@redhat.com>

	* configure.ac: Release 1.104.2.
	* NEWS: Update.

2010-03-04  Miloslav Trmač  <mitr@redhat.com>

	* configure.ac: Release 1.104.1.
	* NEWS: Update.
	* po/LINGUAS: Sort.

	* Makefile.am (archive)
	* configure.ac: Use xz to compress the distribution tarball.

2010-02-25  Miloslav Trmač  <mitr@redhat.com>

	* configure.ac: Release 1.104.
	* NEWS: Update.

	* userhelper-wrap.c (userhelper_read_childout): Handle messages in
	non-UTF-8 encodings that use more bytes in UTF-8.
	(userhelper_runv): Disable character set conversion in childout_channel.

2010-02-16  Miloslav Trmač  <mitr@redhat.com>

	* configure.ac: Release 1.103.
	* NEWS: Update.
	* po/LINGUAS: Update.

2010-02-05  Miloslav Trmač  <mitr@redhat.com>
